<resources>
    <string name="app_name">Learning License </string>
    <string name="noInternet">No internet connection...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="IdproofHeading"><![CDATA[* At least one photo & one address proof mandatory.]]></string>
    <string name="card_number_hint">Enter card number</string>
    <string name="credit_card_number_hint">Enter Credit Card number</string>
    <string name="card_name_hint">Enter card holder name</string>
    <string name="card_nick_name_hint">Enter nick name</string>
    <string name="dp_request_prompt">Select the DP Request Type</string>
    <string name="sign_in_btn_text">Sign In</string>
    <string name="resend_btn_text">Resend</string>
    <string name="reset_pass_text">Reset Password</string>
    <string name="signup_text">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="is_citrus_member_text">Is Citrus Member?</string>
    <string name="enter_mobile_text">Enter Mobile No</string>
    <string name="dummy_mobile_hint"></string>
    <string name="dummy_email_hint"></string>
    <string name="dummy_password"></string>
    <string name="enter_email_text">Enter Email Id</string>
    <string name="login_credentials_text">Login Credentials</string>
    <string name="home">Home</string>
    <string name="apply_for_ll">Apply for LL</string>
    <string name="rto_locator">Rto Locator</string>
    <string name="check_status_of_ll">Check Status of LL</string>
    <string name="read_instructions">Read Instructions</string>
    <string name="download_form">Download Form</string>
    <string name="chang_lang">Change Language</string>
    <string name="exit">Exit</string>
    <string name="apply_for_learning_licence">Apply for Learning Licence</string>
    <string name="check_status_of_learning_license_application">Check Status of Learning License Application</string>
    <string name="download_application_form_for_learning_license">Download Application form for Learning license</string>
    <string name="learning_license">Learning License</string>
    <string name="odissa_state_transport">Odissa state transport.</string>
    <string name="please_take_the_appointment_for_district_rto_where_he_she_resides">Please take the appointment for District RTO where he/she resides.</string>
    <string name="please_choose_an_appointment_slot_as_per_your_preference">Please choose an appointment slot as per your preference</string>
    <string name="after_fee_payment_download_application_form">After fee Payment download application form</string>
    <string name="note">NOTE :-</string>
    <string name="please_select_the_desired_class_for_which_you_are_applying">Please select the desired class for which you are applying</string>
    <string name="select_rto">Select RTO*</string>
    <string name="mandatory_fields">* Mandatory fields</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="applicant_name">Applicant Name*</string>
    <string name="midddle_name">Midddle Name</string>
    <string name="last_name">Last Name*</string>
    <string name="date_of_birth">Date of Birth*</string>
    <string name="gender">Gender</string>
    <string name="place_of_birth">Place of Birth*</string>
    <string name="country_by_birth">Country by Birth*</string>
    <string name="citizenship_status_by">Citizenship status by*</string>
    <string name="if_place_of_birth_is_out_side_india_month_and_year_when_migrated_to_india">If place of birth is out side India, Month and Year when migrated to India:</string>
    <string name="email">Email*</string>
    <string name="relationship_type">Relationship Type*</string>
    <string name="relation_s_name">Relation\'s Name*</string>
    <string name="middle_name">Middle Name</string>
    <string name="present_address">Present Address</string>
    <string name="atleast_one_field_required_in_present_address">Atleast one field required in Present Address</string>
    <string name="flat_number">Flat Number</string>
    <string name="flat_house_name">Flat / House Name</string>
    <string name="house_number_plot_no">House Number/Plot No</string>
    <string name="street">Street</string>
    <string name="locality">Locality</string>
    <string name="village_town_city">Village / Town / City</string>
    <string name="taluka_mandal">Taluka / Mandal</string>
    <string name="district">District*</string>
    <string name="educational_qualification">Educational Qualification*</string>
    <string name="id_mark_1">Id Mark1</string>
    <string name="id_mark_2">Id Mark2</string>
    <string name="blood_group">Blood Group</string>
    <string name="rh">RH*</string>
    <string name="document_number">Document Number</string>
    <string name="issuing_authority">Issuing Authority</string>
    <string name="date_of_issue">Date of Issue</string>
    <string name="debit_card">Debit Card</string>
    <string name="card_number">Card numberା</string>
    <string name="card_name">Card Name</string>
    <string name="expiry_date"> Expiry Date</string>
    <string name="id_proof">Id Proof*</string>
    <string name="next">Next</string>
    <string name="fee_information">Fee Information</string>
    <string name="application_fee_rs_0">Application fee:</string>
    <string name="paperdoc_fee_tax_rs_20">Paperdoc fee+tax : Rs. 23.00</string>
    <string name="smart_card_fee_rs_0">Smart card fee : Rs.0</string>
    <string name="appointment_schedule">        Appointment schedule :    </string>
    <string name="permanent_address">Permanent Address</string>
    <string name="back">back</string>
    <string name="credit_card">Credit Card</string>
    <string name="netbanking">Net Banking</string>
    <string name="wallet_accounts">
        Wallet Account
    </string>
    <string name="selectRTO">Select RTO</string>
    <string name="aFName">Enter applicant first name</string>
    <string name="aLNAME">Enter applicant last name</string>
    <string name="oANAME">Only aplhabets  allowed in the Name</string>
    <string name="eDOB">Enter Date of Birth</string>
    <string name="sGender">Select Gender</string>
    <string name="sCOBirth">"Select Country of Birth"</string>
    <string name="sCitizenship">"Select Citizenship"</string>
    <string name="ePOBirth">"Enter place of birth"</string>
    <string name="eVEmailId">"Enter valid Email Id"</string>
    <string name="sRelationType">"Select RelationType"</string>
    <string name="RTNGender">"RelationType and Gender Does not match"</string>
    <string name="eRelativeFirstN">"Enter applicant relative first name"</string>
    <string name="eRelativeLName">"Enter applicant relative last name"</string>
    <string name="tOneField">"Atleast one field required in Present Address"</string>
    <string name="tTaluka">"Present Taluka cannot be empty"</string>
    <string name="tDEmpty">"Present District cannot be empty"</string>
    <string name="tState">"Select Present State"</string>
    <string name="tMonth">"Present Month cannot be empty"</string>
    <string name="tAYears">"only digits allowed in Present Years"</string>
    <string name="tAMonths">"only digits allowed in Present Months"</string>
    <string name="tAPincode">"only digits allowed in Pincode"</string>
    <string name="tPincode">"Present Pincode not vaild"</string>
    <string name="mDigits">"Mobile Number should have 10 digits"</string>
    <string name="mANumber">"only digits allowed in Mobile Number"</string>
    <string name="pOneField">"Atleast one field required in Permanent Address"</string>
    <string name="pDEmpty">"Permanent District cannot be empty"</string>
    <string name="pState">"Select Permanent State"</string>
    <string name="pYear">"Years cannot be empty"</string>
    <string name="pAYears">"only digit in Years"</string>
    <string name="pAMonths">"only digits allowed in Months"</string>
    <string name="pPincode">"Invalid Permanent Pincode "</string>
    <string name="pAPincode">"only digits allowed in Pincode"</string>
    <string name="pMDigits">"Mobile Number should have 10 digits"</string>
    <string name="qualification">"Select Qualification "</string>
    <string name="idMark">"Select Id Mark1"</string>
    <string name="idMark2">"Select Id Mark2"</string>
    <string name="bloodGroup">"Select Bloodgroup"</string>
    <string name="pDistrict">"Present District cannot be empty"</string>
    <string name="rcRequired">Registration number required for INVALID CARRIAGE VEHICLE</string>
    <string name="eId">Enter Id proof</string>
    <string name="eDocNum">Enter Document Number</string>
    <string name="eIssAuthority">Enter Issuing Authority</string>
    <string name="eDateOfIssue">Enter Date of Issue</string>
    <string name="rcInvalidRequired">Registration number required for INVALID CARRIAGE VEHICLE</string>
    <string name="eRC">Enter Registration number</string>
    <string name="idLimit">Cannot exceed limit of 4 Id proof</string>
    <string name="cannotRemove">Cannot Remove More</string>
    <string name="paymentFailed">Payment failed</string>
    <string name="DLTvehicle">Driving license is compulsory for Transport vehicle</string>
    <string name="DL1less">Driving license issue date should be, 1 year less than current date</string>
    <string name="refLength">Reference number should be 7 digit long.</string>
    <string name="dateCEmpty">Date cannot be empty</string>
    <string name="PayFail">Payable payment failure</string>
    <string name="selectOne">Please select any one option</string>
    <string name="pSameT">Permanent address same as Present address.</string>
    <string name="state">State*</string>
    <string name="duration_of_stay">Duration of Stay*</string>
    <string name="pin_code">Pin Code*</string>
    <string name="moblie_no">Moblie No*</string>
    <string name="permanentAddress">Permanent Address</string>
    <string name="permanentAddressCondition">Atleast one field required in Permanent Address</string>
    <string name="smartchipFeeTax">Smartchip fee+tax : Rs. 5.76</string>
    <string name="totalAmount">Total Amount :</string>
    <string name="rto">RTO</string>
    <string name="appointmentTime">Appointment time :</string>
    <string name="appointmentDate">Appointment date :</string>
    <string name="classOfVehicles">Class of Vehicle</string>
    <string name="personalDetails">Personal Details</string>
    <string name="otherDetails">Other Details</string>
    <string name="appointmentSchedule">Appointment Schedule</string>
    <string name="confirmAndPay">Confirm and Pay</string>
    <string name="payment_options">Payment Options</string>
    <string name="payable_amount">Payable amount :</string>
    <string name="userName">User Name</string>
    <string name="userPwd">Password</string>
    <string name="payRs">Pay Rs. 1.1</string>
    <string name="paymntSuccessMsg1">1. PDF Successfully downloaded check M-Parivahan folder in Directory or Notification</string>
    <string name="paymntSuccessMsg2">2. Press ok to go Home.</string>
    <string name="paymntSuccessMsg3">3. Press stay for further activity.</string>
    <string name="driving_lic_comp_trans">Driving license is compulsory for Transport vehicle.</string>
    <string name="driving_lic_issue_date">Driving license issue date should be, 1 year less than current date.</string>
    <string name="loadingText_idProof">Submitting form please wait...</string>
    <string name="thankYouMsgPart1">Thank You for Using M-Parivahan</string>
    <string name="thankYouMsgPart2">for your Learning License Application</string>
    <string name="saveApplicationMsg">Save Application Details</string>
    <string name="emailEdtTxtHint">Enter email to receive pdf</string>
</resources>