<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/golsy"
    android:padding="6dp"
    tools:context=".ActivityFragments.NoPaymentFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Amount Paid :Rs. 340 "
                android:gravity="center"
                android:visibility="gone"
                android:textSize="24dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src= "@drawable/payment_successful"
                    android:id="@+id/imageView3"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/textViewFee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:textSize="18dp"
                    android:layout_margin="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imageView3"
                    android:layout_toRightOf="@+id/imageView3" />
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/thankYouMsgPart1"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:id="@+id/textView8"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/thankYouMsgPart2"
                android:textSize="14sp"
                android:textStyle="italic"
                android:id="@+id/textView9"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="#d7b89c" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryTransportDepartment"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/saveApplicationMsg"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <EditText
                android:id="@+id/emailToSend"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="14sp"
                android:maxLength="30"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edit_text_personal_details"
                android:hint="@string/emailEdtTxtHint"
                android:layout_span="5"
                android:textColorHint="@android:color/secondary_text_dark_nodisable"
                />

            <ImageView
                android:id="@+id/buttonEmail"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:background="@color/colorPrimaryTransportDepartment"
                android:src="@drawable/send"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="5dp"
                android:background="#d7b89c"/>

            <TextView
                android:id="@+id/textViewForm"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_span="1"
                android:layout_margin="2dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text=""
                android:background="@drawable/edit_text_personal_details"
                android:padding="10dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/buttonDownload"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:padding="5dp"
                android:src="@drawable/download"
                android:background="@color/colorPrimaryTransportDepartment"
                android:layout_margin="2dp"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
