
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_home"
         tools:context="com.converge.transportdepartment.HomeFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logo_home"
            android:layout_marginBottom="30dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">
            <TableRow
                android:gravity="center"

                >
                <ImageView
                    android:background="#EC6A25"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:padding="10dp"
                    android:onClick="onClick"
                    android:id="@+id/imageViewApply"
                    android:src="@drawable/apply"/>
                <ImageView
                    android:background="#EC6A25"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:padding="10dp"
                    android:onClick="onClick"
                    android:id="@+id/imageViewCheckStatus"
                    android:src="@drawable/check"/>
            </TableRow>
            <TableRow
                android:gravity="center"
                >
                <ImageView
                    android:background="#A94B1A"
                    android:padding="4dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:textColor="@android:color/white"
                    android:src="@drawable/text_1"
                    android:onClick="onClick"
                    android:id="@+id/textViewApply"
                    />
                <ImageView
                    android:background="#A94B1A"
                    android:padding="4dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:textAlignment="center"
                    android:src="@drawable/text_2"
                    android:textColor="@android:color/white"
                    android:id="@+id/textViewCheckStatus"
                    android:onClick="onClick"
                    android:text="Check Status"/>
            </TableRow>


            <TableRow android:layout_marginTop="5dp">
                <ImageView
                    android:background="#EC6A25"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:padding="10dp"
                    android:onClick="onClick"
                    android:id="@+id/imageViewReadInstructions"
                    android:src="@drawable/read"/>
                <ImageView
                    android:background="#EC6A25"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:padding="10dp"
                    android:onClick="onClick"
                    android:id="@+id/imageViewDownloadApplication"
                    android:src="@drawable/download_home"/>
            </TableRow>
            <TableRow>

                <ImageView
                    android:background="#A94B1A"
                    android:padding="4dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:textColor="@android:color/white"
                    android:src="@drawable/text_3"
                    android:id="@+id/textViewReadInstructions"
                    android:onClick="onClick"
                    android:text="Read Instruction"/>
                <ImageView
                    android:background="#A94B1A"
                    android:padding="4dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:onClick="onClick"
                    android:src="@drawable/text_4"
                    android:textColor="@android:color/white"
                    android:id="@+id/textViewDownloadApplication"
                    />
            </TableRow>

        </TableLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/note"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_margin="3dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="35dp"
                    android:src="@drawable/checkbox_home_activity"
                    android:layout_weight=".10"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/please_take_the_appointment_for_district_rto_where_he_she_resides"
                    android:textColor="@android:color/black"
                    android:id="@+id/textView1"
                    android:paddingLeft="5dp"
                    android:textSize="12sp"
                    android:layout_weight=".90"
                    android:layout_gravity="bottom"
                    android:gravity="center_vertical" />

            </TableRow>
            <TableRow
                android:layout_margin="2dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="35dp"
                    android:src="@drawable/checkbox_home_activity"
                    android:layout_weight=".10"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/please_choose_an_appointment_slot_as_per_your_preference"
                    android:textColor="@android:color/black"
                    android:id="@+id/textView1"
                    android:paddingLeft="5dp"
                    android:textSize="12sp"
                    android:layout_weight=".90"
                    android:layout_gravity="bottom"
                    android:gravity="center_vertical" />

            </TableRow>
            <TableRow
                android:layout_margin="2dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="35dp"
                    android:src="@drawable/checkbox_home_activity"
                    android:layout_weight=".10"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/after_fee_payment_download_application_form"
                    android:textColor="@android:color/black"
                    android:id="@+id/textView1"
                    android:paddingLeft="5dp"
                    android:textSize="12sp"
                    android:layout_weight=".90"
                    android:layout_gravity="bottom"
                    android:gravity="center_vertical" />

            </TableRow>
        </TableLayout>
        </LinearLayout>
    </ScrollView>

    <!--<TableLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->

        <!--&gt;-->
    <!--<TableRow-->
        <!--android:layout_margin="3dp">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="40dp"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="Apply for Learning Licence"-->
            <!--android:textColor="@android:color/background_light"-->
            <!--android:id="@+id/textViewApply"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:layout_weight=".90"-->
            <!--android:layout_gravity="bottom" android:background="@color/colorPrimaryTransportDepartment"-->
            <!--android:gravity="center_vertical"-->
            <!--android:clickable="false"-->
            <!--android:onClick="onClick" />-->
        <!--<ImageView-->
            <!--android:id="@+id/imageViewApply"-->
            <!--android:layout_width="20dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:src="@drawable/navgation_link"-->
            <!--android:background="#AC5400"-->
            <!--android:layout_weight=".10"-->
            <!--android:onClick="onClick"/>-->
    <!--</TableRow>-->
    <!--<TableRow-->
        <!--android:layout_margin="3dp">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="40dp"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="Check Status of Learning License Application"-->
            <!--android:textColor="@android:color/background_light"-->
            <!--android:id="@+id/textViewCheckStatus"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:layout_weight=".90"-->
            <!--android:layout_gravity="bottom" android:background="@color/colorPrimaryTransportDepartment"-->
            <!--android:gravity="center_vertical"-->
            <!--android:onClick="onClick"/>-->
        <!--<ImageView-->
            <!--android:id="@+id/imageViewCheckStatus"-->
            <!--android:layout_width="20dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:src="@drawable/navgation_link"-->
            <!--android:background="#AC5400"-->
            <!--android:layout_weight=".10"-->
            <!--android:onClick="onClick"/>-->
    <!--</TableRow>-->
    <!--<TableRow-->
        <!--android:layout_margin="3dp">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="40dp"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="Read Instructions"-->
            <!--android:textColor="@android:color/background_light"-->
            <!--android:id="@+id/textViewReadInstructions"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:layout_weight=".90"-->
            <!--android:layout_gravity="bottom" android:background="@color/colorPrimaryTransportDepartment"-->
            <!--android:gravity="center_vertical"-->
            <!--android:onClick="onClick"/>-->
        <!--<ImageView-->
            <!--android:id="@+id/imageViewReadInstructions"-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:src="@drawable/navgation_link"-->
            <!--android:background="#AC5400"-->
            <!--android:layout_weight=".10"-->
            <!--android:onClick="onClick"/>-->
    <!--</TableRow>-->
    <!--<TableRow-->
        <!--android:layout_margin="3dp">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="40dp"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="Download Application form for Learning license"-->
            <!--android:textColor="@android:color/background_light"-->
            <!--android:id="@+id/textViewDownloadApplication"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:layout_weight=".90"-->
            <!--android:layout_gravity="bottom" android:background="@color/colorPrimaryTransportDepartment"-->
            <!--android:gravity="center_vertical"-->
            <!--android:onClick="onClick"/>-->
        <!--<ImageView-->
            <!--android:id="@+id/imageViewDownloadApplication"-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:src="@drawable/navgation_link"-->
            <!--android:background="#AC5400"-->
            <!--android:layout_weight=".10"-->
            <!--android:onClick="onClick"/>-->
    <!--</TableRow>-->


    <!--</TableLayout>-->